--- a/udagram.yml
+++ b/udagram.yml
@@ -20,12 +20,11 @@ Resources:
             apt-get update -y
             sudo apt-get install nginx -y
             service nginx start
-            echo "Response from Sarah server" > /var/www/html/index.html
-# aws s3 cp s3://s3-bucket-project2-sarah-kh/index.html /var/www/html/
+            echo "It works! Udagram, Udacity" > /var/www/html/index.html
         ImageId: ami-053b0d53c279acc90
         SecurityGroupIds:
           - !Ref WebServerSecGroup
-        InstanceType: t2.micro
+        InstanceType: t3.small
         BlockDeviceMappings:
         - DeviceName: "/dev/sdk"
           Ebs:
